// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render RenderDropzone withour error 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <IntlProvider
    locale="en"
    messages={Object {}}
  >
    <ThemeProvider
      theme={
        Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        }
      }
    >
      <RenderDropzone
        accept="image/png, image/jpeg, image/jpg"
        input={
          Object {
            "name": "test",
            "onChange": [Function],
          }
        }
        meta={
          Object {
            "touched": false,
          }
        }
        theme={
          Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
        }
      />
    </ThemeProvider>
  </IntlProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <RenderDropzone
        accept="image/png, image/jpeg, image/jpg"
        input={
          Object {
            "name": "test",
            "onChange": [Function],
          }
        }
        meta={
          Object {
            "touched": false,
          }
        }
        theme={
          Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
        }
      />,
      "theme": Object {
        "colors": Object {
          "alert": "#ffa000",
          "black": "#262626",
          "danger": "#d32f2f",
          "grayscale": Object {
            "dark": "#5E5E5E",
            "darker": "#383838",
            "darkest": "#131313",
            "light": "#D1D1D1",
            "lighter": "#EBEBEB",
            "lightest": "#F9F9F9",
            "medium": "#ABABAB",
          },
          "grey": "#EEE",
          "primary": "#3333FE",
          "secondary": "#FDB63F",
          "success": "#388e3c",
          "white": "#FFF",
        },
        "fonts": Object {
          "family": Object {
            "andesBlack": "andes-black, serif",
            "andesLight": "andes-extralight, serif",
            "montserrat": "montserrat, sans-serif",
          },
          "size": Object {
            "base": "1.4rem",
            "l": "1.8rem",
            "m": "1.5rem",
            "reset": "62.5%",
            "root": "1rem",
            "s": "1.2rem",
            "xl": "2.4rem",
            "xs": "1rem",
            "xxl": "3.2rem",
            "xxxl": "5rem",
          },
        },
        "grid": Object {
          "breakpoints": Object {
            "l": 992,
            "m": 768,
            "s": 576,
            "xl": 1200,
            "xs": 0,
          },
          "container": 120,
          "gridSize": 12,
          "gutterGrid": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 2.5,
            "xs": 1.6,
          },
          "gutterWidth": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
          "outerMargin": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
          "padding": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
        },
        "icons": Object {
          "size": Object {
            "l": "2.4rem",
            "m": "2rem",
            "s": "1.6rem",
            "xl": "3.6rem",
            "xs": "1.2rem",
            "xxl": "4.8rem",
            "xxxl": "5.6rem",
          },
        },
        "spaces": Object {
          "l": "2.5rem",
          "m": "1.6rem",
          "s": "0.8rem",
          "xl": "3.2rem",
          "xs": "0.4rem",
          "xxl": "5rem",
          "xxxl": "10rem",
        },
        "ui": Object {
          "size": Object {
            "l": "100%",
            "m": "40rem",
            "s": "20rem",
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "accept": "image/png, image/jpeg, image/jpg",
        "input": Object {
          "name": "test",
          "onChange": [Function],
        },
        "meta": Object {
          "touched": false,
        },
        "theme": Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <RenderDropzone
          accept="image/png, image/jpeg, image/jpg"
          input={
            Object {
              "name": "test",
              "onChange": [Function],
            }
          }
          meta={
            Object {
              "touched": false,
            }
          }
          theme={
            Object {
              "colors": Object {
                "alert": "#ffa000",
                "black": "#262626",
                "danger": "#d32f2f",
                "grayscale": Object {
                  "dark": "#5E5E5E",
                  "darker": "#383838",
                  "darkest": "#131313",
                  "light": "#D1D1D1",
                  "lighter": "#EBEBEB",
                  "lightest": "#F9F9F9",
                  "medium": "#ABABAB",
                },
                "grey": "#EEE",
                "primary": "#3333FE",
                "secondary": "#FDB63F",
                "success": "#388e3c",
                "white": "#FFF",
              },
              "fonts": Object {
                "family": Object {
                  "andesBlack": "andes-black, serif",
                  "andesLight": "andes-extralight, serif",
                  "montserrat": "montserrat, sans-serif",
                },
                "size": Object {
                  "base": "1.4rem",
                  "l": "1.8rem",
                  "m": "1.5rem",
                  "reset": "62.5%",
                  "root": "1rem",
                  "s": "1.2rem",
                  "xl": "2.4rem",
                  "xs": "1rem",
                  "xxl": "3.2rem",
                  "xxxl": "5rem",
                },
              },
              "grid": Object {
                "breakpoints": Object {
                  "l": 992,
                  "m": 768,
                  "s": 576,
                  "xl": 1200,
                  "xs": 0,
                },
                "container": 120,
                "gridSize": 12,
                "gutterGrid": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 2.5,
                  "xs": 1.6,
                },
                "gutterWidth": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
                "outerMargin": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
                "padding": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
              },
              "icons": Object {
                "size": Object {
                  "l": "2.4rem",
                  "m": "2rem",
                  "s": "1.6rem",
                  "xl": "3.6rem",
                  "xs": "1.2rem",
                  "xxl": "4.8rem",
                  "xxxl": "5.6rem",
                },
              },
              "spaces": Object {
                "l": "2.5rem",
                "m": "1.6rem",
                "s": "0.8rem",
                "xl": "3.2rem",
                "xs": "0.4rem",
                "xxl": "5rem",
                "xxxl": "10rem",
              },
              "ui": Object {
                "size": Object {
                  "l": "100%",
                  "m": "40rem",
                  "s": "20rem",
                },
              },
            }
          }
        />,
        "theme": Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "accept": "image/png, image/jpeg, image/jpg",
          "input": Object {
            "name": "test",
            "onChange": [Function],
          },
          "meta": Object {
            "touched": false,
          },
          "theme": Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`trigger an error 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <IntlProvider
    locale="en"
    messages={Object {}}
  >
    <ThemeProvider
      theme={
        Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        }
      }
    >
      <RenderDropzone
        accept="image/png, image/jpeg, image/jpg"
        input={
          Object {
            "name": "test",
            "onChange": [Function],
          }
        }
        meta={
          Object {
            "error": Object {
              "id": "test",
              "values": Object {},
            },
            "touched": true,
          }
        }
        theme={
          Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
        }
      />
    </ThemeProvider>
  </IntlProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <RenderDropzone
        accept="image/png, image/jpeg, image/jpg"
        input={
          Object {
            "name": "test",
            "onChange": [Function],
          }
        }
        meta={
          Object {
            "error": Object {
              "id": "test",
              "values": Object {},
            },
            "touched": true,
          }
        }
        theme={
          Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          }
        }
      />,
      "theme": Object {
        "colors": Object {
          "alert": "#ffa000",
          "black": "#262626",
          "danger": "#d32f2f",
          "grayscale": Object {
            "dark": "#5E5E5E",
            "darker": "#383838",
            "darkest": "#131313",
            "light": "#D1D1D1",
            "lighter": "#EBEBEB",
            "lightest": "#F9F9F9",
            "medium": "#ABABAB",
          },
          "grey": "#EEE",
          "primary": "#3333FE",
          "secondary": "#FDB63F",
          "success": "#388e3c",
          "white": "#FFF",
        },
        "fonts": Object {
          "family": Object {
            "andesBlack": "andes-black, serif",
            "andesLight": "andes-extralight, serif",
            "montserrat": "montserrat, sans-serif",
          },
          "size": Object {
            "base": "1.4rem",
            "l": "1.8rem",
            "m": "1.5rem",
            "reset": "62.5%",
            "root": "1rem",
            "s": "1.2rem",
            "xl": "2.4rem",
            "xs": "1rem",
            "xxl": "3.2rem",
            "xxxl": "5rem",
          },
        },
        "grid": Object {
          "breakpoints": Object {
            "l": 992,
            "m": 768,
            "s": 576,
            "xl": 1200,
            "xs": 0,
          },
          "container": 120,
          "gridSize": 12,
          "gutterGrid": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 2.5,
            "xs": 1.6,
          },
          "gutterWidth": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
          "outerMargin": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
          "padding": Object {
            "l": 2.5,
            "m": 2.5,
            "s": 1.6,
            "xl": 5,
            "xs": 1.6,
          },
        },
        "icons": Object {
          "size": Object {
            "l": "2.4rem",
            "m": "2rem",
            "s": "1.6rem",
            "xl": "3.6rem",
            "xs": "1.2rem",
            "xxl": "4.8rem",
            "xxxl": "5.6rem",
          },
        },
        "spaces": Object {
          "l": "2.5rem",
          "m": "1.6rem",
          "s": "0.8rem",
          "xl": "3.2rem",
          "xs": "0.4rem",
          "xxl": "5rem",
          "xxxl": "10rem",
        },
        "ui": Object {
          "size": Object {
            "l": "100%",
            "m": "40rem",
            "s": "20rem",
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "accept": "image/png, image/jpeg, image/jpg",
        "input": Object {
          "name": "test",
          "onChange": [Function],
        },
        "meta": Object {
          "error": Object {
            "id": "test",
            "values": Object {},
          },
          "touched": true,
        },
        "theme": Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <RenderDropzone
          accept="image/png, image/jpeg, image/jpg"
          input={
            Object {
              "name": "test",
              "onChange": [Function],
            }
          }
          meta={
            Object {
              "error": Object {
                "id": "test",
                "values": Object {},
              },
              "touched": true,
            }
          }
          theme={
            Object {
              "colors": Object {
                "alert": "#ffa000",
                "black": "#262626",
                "danger": "#d32f2f",
                "grayscale": Object {
                  "dark": "#5E5E5E",
                  "darker": "#383838",
                  "darkest": "#131313",
                  "light": "#D1D1D1",
                  "lighter": "#EBEBEB",
                  "lightest": "#F9F9F9",
                  "medium": "#ABABAB",
                },
                "grey": "#EEE",
                "primary": "#3333FE",
                "secondary": "#FDB63F",
                "success": "#388e3c",
                "white": "#FFF",
              },
              "fonts": Object {
                "family": Object {
                  "andesBlack": "andes-black, serif",
                  "andesLight": "andes-extralight, serif",
                  "montserrat": "montserrat, sans-serif",
                },
                "size": Object {
                  "base": "1.4rem",
                  "l": "1.8rem",
                  "m": "1.5rem",
                  "reset": "62.5%",
                  "root": "1rem",
                  "s": "1.2rem",
                  "xl": "2.4rem",
                  "xs": "1rem",
                  "xxl": "3.2rem",
                  "xxxl": "5rem",
                },
              },
              "grid": Object {
                "breakpoints": Object {
                  "l": 992,
                  "m": 768,
                  "s": 576,
                  "xl": 1200,
                  "xs": 0,
                },
                "container": 120,
                "gridSize": 12,
                "gutterGrid": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 2.5,
                  "xs": 1.6,
                },
                "gutterWidth": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
                "outerMargin": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
                "padding": Object {
                  "l": 2.5,
                  "m": 2.5,
                  "s": 1.6,
                  "xl": 5,
                  "xs": 1.6,
                },
              },
              "icons": Object {
                "size": Object {
                  "l": "2.4rem",
                  "m": "2rem",
                  "s": "1.6rem",
                  "xl": "3.6rem",
                  "xs": "1.2rem",
                  "xxl": "4.8rem",
                  "xxxl": "5.6rem",
                },
              },
              "spaces": Object {
                "l": "2.5rem",
                "m": "1.6rem",
                "s": "0.8rem",
                "xl": "3.2rem",
                "xs": "0.4rem",
                "xxl": "5rem",
                "xxxl": "10rem",
              },
              "ui": Object {
                "size": Object {
                  "l": "100%",
                  "m": "40rem",
                  "s": "20rem",
                },
              },
            }
          }
        />,
        "theme": Object {
          "colors": Object {
            "alert": "#ffa000",
            "black": "#262626",
            "danger": "#d32f2f",
            "grayscale": Object {
              "dark": "#5E5E5E",
              "darker": "#383838",
              "darkest": "#131313",
              "light": "#D1D1D1",
              "lighter": "#EBEBEB",
              "lightest": "#F9F9F9",
              "medium": "#ABABAB",
            },
            "grey": "#EEE",
            "primary": "#3333FE",
            "secondary": "#FDB63F",
            "success": "#388e3c",
            "white": "#FFF",
          },
          "fonts": Object {
            "family": Object {
              "andesBlack": "andes-black, serif",
              "andesLight": "andes-extralight, serif",
              "montserrat": "montserrat, sans-serif",
            },
            "size": Object {
              "base": "1.4rem",
              "l": "1.8rem",
              "m": "1.5rem",
              "reset": "62.5%",
              "root": "1rem",
              "s": "1.2rem",
              "xl": "2.4rem",
              "xs": "1rem",
              "xxl": "3.2rem",
              "xxxl": "5rem",
            },
          },
          "grid": Object {
            "breakpoints": Object {
              "l": 992,
              "m": 768,
              "s": 576,
              "xl": 1200,
              "xs": 0,
            },
            "container": 120,
            "gridSize": 12,
            "gutterGrid": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 2.5,
              "xs": 1.6,
            },
            "gutterWidth": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "outerMargin": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
            "padding": Object {
              "l": 2.5,
              "m": 2.5,
              "s": 1.6,
              "xl": 5,
              "xs": 1.6,
            },
          },
          "icons": Object {
            "size": Object {
              "l": "2.4rem",
              "m": "2rem",
              "s": "1.6rem",
              "xl": "3.6rem",
              "xs": "1.2rem",
              "xxl": "4.8rem",
              "xxxl": "5.6rem",
            },
          },
          "spaces": Object {
            "l": "2.5rem",
            "m": "1.6rem",
            "s": "0.8rem",
            "xl": "3.2rem",
            "xs": "0.4rem",
            "xxl": "5rem",
            "xxxl": "10rem",
          },
          "ui": Object {
            "size": Object {
              "l": "100%",
              "m": "40rem",
              "s": "20rem",
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "accept": "image/png, image/jpeg, image/jpg",
          "input": Object {
            "name": "test",
            "onChange": [Function],
          },
          "meta": Object {
            "error": Object {
              "id": "test",
              "values": Object {},
            },
            "touched": true,
          },
          "theme": Object {
            "colors": Object {
              "alert": "#ffa000",
              "black": "#262626",
              "danger": "#d32f2f",
              "grayscale": Object {
                "dark": "#5E5E5E",
                "darker": "#383838",
                "darkest": "#131313",
                "light": "#D1D1D1",
                "lighter": "#EBEBEB",
                "lightest": "#F9F9F9",
                "medium": "#ABABAB",
              },
              "grey": "#EEE",
              "primary": "#3333FE",
              "secondary": "#FDB63F",
              "success": "#388e3c",
              "white": "#FFF",
            },
            "fonts": Object {
              "family": Object {
                "andesBlack": "andes-black, serif",
                "andesLight": "andes-extralight, serif",
                "montserrat": "montserrat, sans-serif",
              },
              "size": Object {
                "base": "1.4rem",
                "l": "1.8rem",
                "m": "1.5rem",
                "reset": "62.5%",
                "root": "1rem",
                "s": "1.2rem",
                "xl": "2.4rem",
                "xs": "1rem",
                "xxl": "3.2rem",
                "xxxl": "5rem",
              },
            },
            "grid": Object {
              "breakpoints": Object {
                "l": 992,
                "m": 768,
                "s": 576,
                "xl": 1200,
                "xs": 0,
              },
              "container": 120,
              "gridSize": 12,
              "gutterGrid": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 2.5,
                "xs": 1.6,
              },
              "gutterWidth": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "outerMargin": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
              "padding": Object {
                "l": 2.5,
                "m": 2.5,
                "s": 1.6,
                "xl": 5,
                "xs": 1.6,
              },
            },
            "icons": Object {
              "size": Object {
                "l": "2.4rem",
                "m": "2rem",
                "s": "1.6rem",
                "xl": "3.6rem",
                "xs": "1.2rem",
                "xxl": "4.8rem",
                "xxxl": "5.6rem",
              },
            },
            "spaces": Object {
              "l": "2.5rem",
              "m": "1.6rem",
              "s": "0.8rem",
              "xl": "3.2rem",
              "xs": "0.4rem",
              "xxl": "5rem",
              "xxxl": "10rem",
            },
            "ui": Object {
              "size": Object {
                "l": "100%",
                "m": "40rem",
                "s": "20rem",
              },
            },
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
